<resources>
    <string name="app_name">Ketsune58Messenger</string>
    <string name="enter_message_input_hint">Enter message</string>
    <string name="enter_message_button_text">Send message</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="continue_button_text">Continue</string>
    <string name="regi_button_text">Sign in</string>
    <string name="enter_login_hint">  Enter login</string>
    <string name="auth_button_text">Sign up</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="back">Back</string>
</resources>