<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginInputField"
            android:hint="@string/enter_login"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInputField"
            android:hint="@string/enter_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeatPassword"
            android:hint="@string/repeat_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:id="@+id/SignUpButton"
                android:text="@string/regi_button_text"/>

            <Button
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:id="@+id/BackButton"
                android:text="@string/back"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>